src/test/deca/syntax/invalid/created/wrong_order_in_bloc/method.deca
// Description:
//      Creation variable apres instruction dans une methode
// Resultats:
//      Erreur syntaxe Ligne 11 : no viable alternative at input 'z'

class A {
    void test(){
        int x;
        int y = 5;
        x = y;
        int z;
    }
}